# Rust-Backend-Application

./: README.md
backend_project/: Cargo.toml
backend_project/src/: db.rs  handlers.rs  main.rs  models.rs
