[package]
name = "backend_project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.0"
tokio = { version = "1.10.0", features = ["full"] }
tokio-postgres = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
syn = { version = "1.0.109", features = ["derive", "full", "parsing", "printing", "visit"] }
dotenv ="0.15"
